--- a/index.html
+++ b/index.html
@@ -12,28 +12,46 @@
     <div id="container">
         <div id="header">
             <nav class="navbar">
-                <h1><a href="#" class="logo">Key Solutions</a></h1>
+                <h1><a href="#" class="logo">Key Solutions IT Company</a></h1>
                 <input type="checkbox" id="toggler">
-                <label for="toggler"><i class="ri--menu-line"></i></label>
+                <label for="toggler" class="menu-icon"><i class="ri--menu-line"></i></label>
                 <div class="menu">
                     <ul class="list">
-                        <li><a href="#">Суурин компьютер</a></li>
-                        <li><a href="#">Дэлгэц</a></li>
+                        <li><a href="#">Вирусны програм</a></li>
                         <li><a href="#">Дагалдах хэрэгсэл</a></li>
-                        <li><a href="#">Зөөврийн компьютер</a></li>
-                        <li><a href="#">Принтер / Сканнер</a></li>
                         <li><a href="#">Сүлжээний төхөөрөмж</a></li>
                         <li><a href="#">Үйлдлийн систем / Лиценз</a></li>
+                        <li><a href="#">Принтер / Принтерийн хор / Сканнер</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </div>
+    
+
+    <section class="container">
+        <div class="slider-wrapper">
+            <div class="slider">
+                <img id="slider-img" src="images/1.png" alt="Image 1">
+                <img id="slider-img" src="images/2.png" alt="Image 2">
+                <img id="slider-img" src="images/3.png" alt="Image 3">
+                <img id="slider-img" src="images/4.png" alt="Image 4">
+                <img id="slider-img" src="images/5.png" alt="Image 5">
+            </div>
+            <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
+            </div>
+        </div>
+    </section>
 
     <div id="content">
         <div id="main">
             <div>
-                <h2>Суурин компьютер</h2>
+                <h2>Вирусны програм</h2>
                 <div id="pc">
                     <div class="card-group">
                         <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
@@ -44,70 +62,61 @@
                 </div>
             </div>
             <div>
-                <h2>Дэлгэц</h2>
-                <div id="display">
-                    <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
-                    </div>
-                </div>
-            </div>
-            <div>
                 <h2>Дагалдах хэрэгсэл</h2>
-                <div id="display">
+                <div id="hardware">
                     <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <h2>Зөөврийн компьютер</h2>
-                <div id="display">
-                    <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <h2>Принтер / Сканнер</h2>
-                <div id="display">
-                    <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
+                        <article class="card">Гар / Хулгана</article>
+                        <article class="card">Веб камер</article>
+                        <article class="card">SSD / HDD</article>
+                        <article class="card">Оффис ширээ / Сандал</article>
+                        <article class="card">Спикер / Чанга яригч</article>
+                        <article class="card">Микрофон</article>
                     </div>
                 </div>
             </div>
             <div>
                 <h2>Сүлжээний төхөөрөмж</h2>
-                <div id="display">
+                <div id="network">
                     <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
+                        <article class="card">Wi-fi төхөөрөмж</article>
+                        <article class="card">Дата цэнэглэх</article>
+                        <article class="card">Кабел / залгуур</article>
+                        <article class="card">Сервер / Рак / Кабинет</article>
                     </div>
                 </div>
             </div>
-            <div id="os">
+            <div>
                 <h2>Үйлдлийн систем / Лиценз</h2>
+                <div id="op">
                     <div class="card-group">
-                        <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
-                        <article class="card">6 сар ашиглах. <div id="price">(65'900₮)</div></article>
-                        <article class="card">1 жил ашиглах. <div id="price">(165'900₮)</div></article>
-                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(1'000'000₮)</div></article>
+                        <article class="card">Windows</article>
+                        <article class="card">Avia 6 сар ашиглах. <br><div id="price">(165'900₮)</div> </article>
+                        <article class="card">Avia 1 жил ашиглах. <div id="price">(325'900₮)</div></article>
+                        <article class="card">Багаар ашиглах. <br> (8 ширхэг түлхүүртэй). <div id="price">(2'520'000₮)</div></article>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Принтер / Принтерийн хор / Сканнер</h2>
+                    <div id="printer">
+                        <div class="card-group">
+                            <article class="card">Принтер</article>
+                            <article class="card">Принтерийн хор</article>
+                            <article class="card">Сканнер</article>
+                            <article class="card">Цаас / Бичиг хэрэг</article>
+                        </div>
                     </div>
             </div>
         </div>
     </div>
+
+    <div class="footer">
+       <a href="">Бидний тухай</a><br>
+        Холбоо барих: 99999999<br>
+        Цахим шуудан: keySolution@info.mn <br>
+        Хаяг: Улаанбаатар хот <br>
+        &copy 2024
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
