--- a/about.html
+++ b/about.html
@@ -14,12 +14,14 @@
             <nav class="navbar">
                 <h1><a href="#" class="logo">Key Solutions IT Company</a></h1>
                 <input type="checkbox" id="toggler">
+
                 <form class="search">
                     <input type="text" placeholder="Хайх" class="searchinput" />
                     <button type="button" class="searchbutton">
                         <i class="ri-search-2-line"></i>
                     </button>
                 </form>
+
                 <label for="toggler" class="menu-icon"><i class="ri--menu-line"></i></label>
                 <div class="menu">
                     <ul class="list">
@@ -33,54 +35,32 @@
             </nav>
         </div>
     </div>
-
-    <div class="about">
-        <h1>Бидний тухай</h1>
-        <p>
-            МЭДЭЭЛЛИЙН ТЕХНОЛОГИЙН ОНЛАЙН ХУДАЛДААНЫ ПЛАТФОРМ – ITSTORE.MN
-        </p>
-        <p>
-            itstore.mn бол амьдрах, суралцах, ажиллах хэв маягийг дижиталжуулах бүх төрлийн мэдээллийн технологийн тоног, 
-            ухаалаг шийдэл бүхий цахилгаан төхөөрөмжөөр төрөлжсөн Монголын хамгийн том онлайн дэлгүүр юм.
-        </p>
-        <p>
-            itstore.mn нь Монголын мэдээллийн технологийн ууган компаниудын нэг Ай Ти Зон компанийн рэтэйл зах зээлд хүрдэг гол суваг 
-            бөгөөд 2020 оны 10 сарын 01-ний өдрөөс хэрэглэгчдэд хялбар, хурдан, найдвартай үйлчилгээг цахим худалдааны сайтаараа 
-            дамжуулан хүргэж эхэлсэн.
-        </p>
-        <p>
-            <b>Технологиор хөгж, Технологиор бүтээ, Технологиор гоё </b> 
-            уриан дор ажиллаж буй ITStore.mn нь орчин цагийн хүн төрөлхтний хөгжлийн гол багаж хэрэгсэл болсон
-             технологиор дамжуулан өөрсдийн хэрэглэгчдээ хөгжих, бүтээх, оюун бодлоо тэлэх, гоёх үүд хаалгаа нээхэд туслахыг зорьдог юм. 
-            Бид Улаанбаатар төдийгүй Монгол орны өнцөг булан бүрд мэдээллийн технологийн бараа бүтээгдэхүүнийг хамгийн өргөн сонголттойгоор шуурхай, албан ёсны баталгаатайгаар хүргэдэг юм.
-        </p>
-        <p>
-            ITStore.mn-д Ай Ти Зон компанийн албан ёсны дистрибьютерийн эрх бүхий Canon, Dell, Apple, Lenovo, Acer, Razer, MSI, Thermaltake, Glorious, Coursair зэрэг брэндүүдийн оригинал бараа 
-            бүтээгдэхүүн борлогдохоос гадна, мэдээллийн технологийн брэндийг Монголд албан ёсоор төлөөлөн, борлуулах эрх бүхий
-             20 гаруй мерчант байгууллагын 5000 гаруй нэр төрлийн бүтээгдэхүүн, үйлчилгээ, лиценз, шийдлүүд нэг дор төрөлжин төвлөрч,
-              цахим платформоор дамжин хэрэглэгчдэд худалдан авалтын хамгийн таатай нөхцөлтэйгөөр хүрдэг.
-        </p>
-        <p>
-            itstore.mn-ийн технологийн чиглэлээр мэргэшсэн онлайн туслахууд хэрэглэгчдэд оновчтой сонголтоо хялбар, 
-            төвөггүйхэн хийхэд нь тусалж, шуурхай хүргэлтийг Улаанбаатар төдийгүй, Монгол улсын 21 аймгийн өнцөг булан 
-            бүрд гараас гарт хүргэн ажиллаж байна.
-        </p>
-        <p>
-            Түүнчлэн хэрэглэгчдээ ямагт сэтгэл ханамжтай байлгах зорилгоор 
-            бараа бүтээгдэхүүндээ 3 хүртэлх жилийн баталгаат хугацаа олгодгоос гадна, 
-            худалдан авалт бүрд 48 цагийн сэтгэл ханамжийн баталгааг санал болгодог билээ.
-        </p>
-        <p>
-            Технологиор хөгж | Технологиор бүтээ | Технологиор гоё
-        </p>
-    </div>
+    <section class="container">
+        <div class="slider-wrapper">
+            <div class="slider">
+                <img id="slider-img" src="images/1.png" alt="Image 1">
+                <img id="slider-img" src="images/2.png" alt="Image 2">
+                <img id="slider-img" src="images/3.png" alt="Image 3">
+                <img id="slider-img" src="images/4.png" alt="Image 4">
+                <img id="slider-img" src="images/5.png" alt="Image 5">
+            </div>
+            <div class="slider-nav">
+                <a href="#slide-1"></a>
+                <a href="#slide-2"></a>
+                <a href="#slide-3"></a>
+                <a href="#slide-4"></a>
+                <a href="#slide-5"></a>
+            </div>
+        </div>
+    </section>
 
     <div id="footer" class="footer">
-        <a href="">Бидний тухай</a><br>
-         Холбоо барих: 99999999<br>
-         Цахим шуудан: keySolution@info.mn <br>
-         Хаяг: Улаанбаатар хот <br>
-         &copy 2024
-     </div>
-
-</body> 
+       <a href="">Бидний тухай</a><br>
+        Холбоо барих: 99999999<br>
+        Цахим шуудан: keySolution@info.mn <br>
+        Хаяг: Улаанбаатар хот <br>
+        &copy 2024
+    </div>
+    <script src="app.js"></script>
+</body>
+</html>
