--- a/service.html
+++ b/service.html
@@ -35,7 +35,7 @@
     <div id="content">
         <div id="main">
             <div>
-                <h2>Вирусны програм</h2>
+                <h2>Вирусийн програм</h2>
                 <div id="pc">
                     <div class="card-group">
                         <article class="card">1 сар ашиглах. <div id="price">(8'900₮)</div></article>
